# SOP-P1

./: .gitignore  README.md
Api/go/: .dockerignore  Dockerfile  sopess1-0650dcee678c.json
Api/go/src/entorno/: enviroment.go
Api/python/: .env  app.py  docker-compose.yml  requirements.txt
Api/python/src/: app.py  main.py
Dockerfiles/: python
Load Tester/Locust/: data.json  traffic.py
Load Tester/go/: data.json
Load Tester/go/src/: main.go
Load Tester/python/: data.json  main.py
Locust/: traffic.py
api/go/: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  go.mod  go.sum
api/go/src/: main.go
api/go/src/database/: mongodb.go  mysql.go
api/go/src/models/: modelo.go
api/python/: Dockerfile  app.py
api/rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
api/rust/src/: main.rs
backend/: .gitignore  package-lock.json  package.json
backend/src/: index.js
backend/src/controllers/mongo/: publicacion.js
backend/src/controllers/mysql/: publicacion.js
backend/src/controllers/subscriber/: subscriber.js
backend/src/database/: mongoDB.js  mysql.js
backend/src/models/: MongoPublicacion.js
backend/src/routes/mongo/: MongoPublicacion.js  publicacion.js
backend/src/routes/mysql/: publicacion.js
backend/src/routes/subscriber/: subscriber.js
dataBase/: consultas mongo  ddl.sql
frontend/olympics-game-news/: package-lock.json  package.json
frontend/olympics-game-news/src/: App.js
kernel/: api_kernel.py
kernel/modulos/: modram.c
kernel/modulos/cpu/: Makefile
kernel/modulos/ram/: Makefile  modram.c
(+13 files in other folders)
