[package]
name = "rust"
version = "0.1.0"
edition = "2018"

[dependencies]
mysql = "*"
dotenv = "*"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
openssl = { version = "0.10", features = ["vendored"] }
gcp-pubsub = "0.1.0"
