[package]
name = "rust"
version = "0.1.0"
edition = "2018"

[dependencies]
mysql = "*"
dotenv = "*"
rocket = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
openssl = { version = "0.10", features = ["vendored"] }
gcp-pubsub = "0.1.0"
futures = "0.3.4"
goauth = { version = "0.6.0-beta1" }

[dependencies.mongodb]
version = "2.0.0"
default-features = false
features = ["sync"]

[dependencies.nanoid]
version = "0.2.0"